--- a/4.CalendarioGeminiMaisConstruido/app/src/main/res/values/colors.xml
+++ b/4.CalendarioGeminiMaisConstruido/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Cores para o Calendário -->
+    <color name="day_selected_color">#ADD8E6</color> <!-- Azul claro para seleção -->
+    <color name="day_reserved_color">#FFC107</color> <!-- Laranja para dias reservados -->
+    <color name="day_today_color">#E0E0E0</color> <!-- Cinza claro para o dia atual (opcional) -->
 </resources>
