--- a/4.CalendarioGeminiMaisConstruido/app/src/main/res/values/themes.xml
+++ b/4.CalendarioGeminiMaisConstruido/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Calendario" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<resources>
+    <style name="Theme.YourApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
     </style>
 
-    <style name="Theme.Calendario" parent="Base.Theme.Calendario" />
+    <style name="DayOfWeekHeader">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
 </resources>
