--- a/7.Calendario/app/src/main/res/layout/activity_main.xml
+++ b/7.Calendario/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +8,10 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <CalendarView
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weekDayTextAppearance="@style/CustomWeekDayTextAppearance"
-        android:dateTextAppearance="@style/CustomDateTextAppearance"/>
-
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/selectedDatesTextView"
         android:layout_width="match_parent"
